test_suite5/ALAN/test_suite/alan-2022-examples/failing/007320_mutation.alan
source y75da begin put "{\n9" if 1 then relax end end
